--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-mcsping",
   "description": "Ping Minecraft服务器",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
@@ -9,7 +9,6 @@
     "dist"
   ],
   "license": "MIT",
-  "scripts": {},
   "keywords": [
     "chatbot",
     "koishi",
@@ -17,5 +16,8 @@
   ],
   "peerDependencies": {
     "koishi": "^4.15.4"
+  },
+  "dependencies": {
+    "minecraftstatuspinger": "^1.1.4"
   }
 }
